(executable
 (name examples)
 (preprocess
  (pps brisk-reconciler.ppx lwt_ppx))
 (libraries revery_examples_stubs skia str Revery Revery_Lwt flex timber))

(install
 (section bin)
 (package revery)
 (files
  Info.plist
  Roboto-Regular.ttf
  Roboto-RegularItalic.ttf
  Roboto-Bold.ttf
  FontAwesome5FreeSolid.otf
  binary.dat
  outrun-logo.png
  reason-logo.png
  outrun-icon.png
  revery-icon.png))
